k750/k750asm/parser.output

state 0
	$accept: .assembly $end 

	IDENTIFIER  shift 5
	.  error

	rawitem  goto 4
	assembly  goto 1
	itemlist  goto 2
	item  goto 3

state 1
	$accept:  assembly.$end 

	$end  accept
	.  error


state 2
	assembly:  itemlist.    (1)
	itemlist:  itemlist.item 

	IDENTIFIER  shift 5
	.  reduce 1 (src line 33)

	rawitem  goto 4
	item  goto 6

state 3
	itemlist:  item.    (3)

	.  reduce 3 (src line 36)


state 4
	item:  rawitem.NL 

	NL  shift 7
	.  error


state 5
	rawitem:  IDENTIFIER.opt_operands 
	rawitem:  IDENTIFIER.: 
	opt_operands: .    (8)

	INTEGER  shift 15
	REGISTER  shift 13
	IDENTIFIER  shift 16
	:  shift 9
	.  reduce 8 (src line 44)

	memory_operand  goto 14
	operand  goto 11
	operands  goto 10
	opt_operands  goto 8
	integer  goto 12

state 6
	itemlist:  itemlist item.    (2)

	.  reduce 2 (src line 35)


state 7
	item:  rawitem NL.    (4)

	.  reduce 4 (src line 38)


state 8
	rawitem:  IDENTIFIER opt_operands.    (5)

	.  reduce 5 (src line 40)


state 9
	rawitem:  IDENTIFIER :.    (6)

	.  reduce 6 (src line 41)


state 10
	opt_operands:  operands.    (7)
	operands:  operands., operand 

	,  shift 17
	.  reduce 7 (src line 43)


state 11
	operands:  operand.    (10)

	.  reduce 10 (src line 47)


state 12
	operand:  integer.    (11)

	.  reduce 11 (src line 49)


state 13
	operand:  REGISTER.    (12)

	.  reduce 12 (src line 50)


state 14
	operand:  memory_operand.    (13)

	.  reduce 13 (src line 51)


state 15
	memory_operand:  INTEGER.[ memory_operand_content ] 
	integer:  INTEGER.    (19)

	[  shift 18
	.  reduce 19 (src line 69)


state 16
	integer:  IDENTIFIER.    (20)

	.  reduce 20 (src line 70)


state 17
	operands:  operands ,.operand 

	INTEGER  shift 15
	REGISTER  shift 13
	IDENTIFIER  shift 16
	.  error

	memory_operand  goto 14
	operand  goto 19
	integer  goto 12

state 18
	memory_operand:  INTEGER [.memory_operand_content ] 

	INTEGER  shift 23
	REGISTER  shift 21
	IDENTIFIER  shift 16
	.  error

	memory_operand_content  goto 20
	integer  goto 22

state 19
	operands:  operands , operand.    (9)

	.  reduce 9 (src line 46)


state 20
	memory_operand:  INTEGER [ memory_operand_content.] 

	]  shift 24
	.  error


state 21
	memory_operand_content:  REGISTER.    (15)
	memory_operand_content:  REGISTER.+ integer 

	+  shift 25
	.  reduce 15 (src line 64)


state 22
	memory_operand_content:  integer.+ REGISTER 
	memory_operand_content:  integer.    (18)

	+  shift 26
	.  reduce 18 (src line 67)


state 23
	integer:  INTEGER.    (19)

	.  reduce 19 (src line 69)


state 24
	memory_operand:  INTEGER [ memory_operand_content ].    (14)

	.  reduce 14 (src line 53)


state 25
	memory_operand_content:  REGISTER +.integer 

	INTEGER  shift 23
	IDENTIFIER  shift 16
	.  error

	integer  goto 27

state 26
	memory_operand_content:  integer +.REGISTER 

	REGISTER  shift 28
	.  error


state 27
	memory_operand_content:  REGISTER + integer.    (16)

	.  reduce 16 (src line 65)


state 28
	memory_operand_content:  integer + REGISTER.    (17)

	.  reduce 17 (src line 66)


12 terminals, 11 nonterminals
21 grammar rules, 29/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
60 working sets used
memory: parser 22/30000
1 extra closures
21 shift entries, 1 exceptions
14 goto entries
3 entries saved by goto default
Optimizer space used: output 34/30000
34 table entries, 0 zero
maximum spread: 12, maximum offset: 25
